umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@stereo_tetrahedral_trans-1-2-dichlorocyclohexane.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:error "resolution underdetermined" :success false}
  :counts {
    :output {
      :atoms [
        "Cl#n3#v"
        "C#h#v3#T1"
        "C#h2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "C#h#v3#T1"
        "Cl#n3#v"]
      :bonds [
        [0 1 :single]
        [1 6 :single]
        [1 2 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 6 :single]
        [6 7 :single]]
      :stereo-atoms [
        {:ligands [0 2 6 [:h 1]] :site 1 :type :cw}
        {:ligands [1 5 7 [:h 6]] :site 6 :type :cw}]}
    :success true}}
