umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@stereo_tetrahedral_trans-decalin.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms ["H" "C" "C#h2" "C#h2" "C#h2" "C#h2" "C" "H" "C#h2" "C#h2" "C#h2" "C#h2"]
      :bonds [
        [0 1 :single]
        [1 6 :single]
        [1 11 :single]
        [1 2 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 6 :single]
        [6 7 :single]
        [6 8 :single]
        [8 9 :single]
        [9 10 :single]
        [10 11 :single]]
      :stereo-atoms [
        {:attrs :ccw :ligands [0 2 6 11] :site 1}
        {:attrs :cw :ligands [1 5 7 8] :site 6}]}
    :success true
    :tie-breaks [2 3 4 5 8 9 10 11]}
  :atom-typing-strict {
    :success false
    :tie-breaks []
    :unresolved {
      2 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      3 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      4 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      5 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      8 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      9 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      10 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      11 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]}}
  :counts-most-saturated {
    :output {
      :atoms ["H" "C" "C#h2" "C#h2" "C#h2" "C#h2" "C" "H" "C#h2" "C#h2" "C#h2" "C#h2"]
      :bonds [
        [0 1 :single]
        [1 6 :single]
        [1 11 :single]
        [1 2 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 6 :single]
        [6 7 :single]
        [6 8 :single]
        [8 9 :single]
        [9 10 :single]
        [10 11 :single]]
      :stereo-atoms [
        {:attrs :ccw :ligands [0 2 6 11] :site 1}
        {:attrs :cw :ligands [1 5 7 8] :site 6}]}
    :success true
    :tie-breaks [2 3 4 5 8 9 10 11]}
  :counts-strict {
    :success false
    :tie-breaks []
    :unresolved {
      2 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      3 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      4 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      5 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      8 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      9 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      10 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      11 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]}}}
