umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@transition_metals_cobalt-porphine.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms [
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "N#n"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "N#c+"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "N#c+"
        "C#h"
        "C"
        "N#n"
        "Co#c-2#n3#u"]
      :bonds [
        [0 22 :single]
        [0 1 :double]
        [1 2 :single]
        [2 23 :single]
        [2 3 :double]
        [3 4 :single]
        [4 8 :single]
        [4 5 :double]
        [5 6 :single]
        [6 7 :double]
        [7 8 :single]
        [7 9 :single]
        [9 10 :double]
        [10 14 :single]
        [10 11 :single]
        [11 12 :double]
        [12 13 :single]
        [13 14 :double]
        [13 15 :single]
        [15 16 :double]
        [16 20 :single]
        [16 17 :single]
        [17 18 :double]
        [18 19 :single]
        [19 20 :double]
        [19 21 :single]
        [21 22 :double]
        [22 23 :single]
        [8 24 :single]
        [14 24 :single]
        [20 24 :single]
        [23 24 :single]]}
    :success true
    :tie-breaks []}
  :atom-typing-strict {
    :output {
      :atoms [
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "N#n"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "N#c+"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "N#c+"
        "C#h"
        "C"
        "N#n"
        "Co#c-2#n3#u"]
      :bonds [
        [0 22 :single]
        [0 1 :double]
        [1 2 :single]
        [2 23 :single]
        [2 3 :double]
        [3 4 :single]
        [4 8 :single]
        [4 5 :double]
        [5 6 :single]
        [6 7 :double]
        [7 8 :single]
        [7 9 :single]
        [9 10 :double]
        [10 14 :single]
        [10 11 :single]
        [11 12 :double]
        [12 13 :single]
        [13 14 :double]
        [13 15 :single]
        [15 16 :double]
        [16 20 :single]
        [16 17 :single]
        [17 18 :double]
        [18 19 :single]
        [19 20 :double]
        [19 21 :single]
        [21 22 :double]
        [22 23 :single]
        [8 24 :single]
        [14 24 :single]
        [20 24 :single]
        [23 24 :single]]}
    :success true
    :tie-breaks []}
  :counts-most-saturated {
    :output {
      :atoms [
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "N#n"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "N#c+"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "N#c+"
        "C#h"
        "C"
        "N#n"
        "Co#c-2#n3#u"]
      :bonds [
        [0 22 :single]
        [0 1 :double]
        [1 2 :single]
        [2 23 :single]
        [2 3 :double]
        [3 4 :single]
        [4 8 :single]
        [4 5 :double]
        [5 6 :single]
        [6 7 :double]
        [7 8 :single]
        [7 9 :single]
        [9 10 :double]
        [10 14 :single]
        [10 11 :single]
        [11 12 :double]
        [12 13 :single]
        [13 14 :double]
        [13 15 :single]
        [15 16 :double]
        [16 20 :single]
        [16 17 :single]
        [17 18 :double]
        [18 19 :single]
        [19 20 :double]
        [19 21 :single]
        [21 22 :double]
        [22 23 :single]
        [8 24 :single]
        [14 24 :single]
        [20 24 :single]
        [23 24 :single]]}
    :success true
    :tie-breaks []}
  :counts-strict {
    :output {
      :atoms [
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "N#n"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "N#c+"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "N#c+"
        "C#h"
        "C"
        "N#n"
        "Co#c-2#n3#u"]
      :bonds [
        [0 22 :single]
        [0 1 :double]
        [1 2 :single]
        [2 23 :single]
        [2 3 :double]
        [3 4 :single]
        [4 8 :single]
        [4 5 :double]
        [5 6 :single]
        [6 7 :double]
        [7 8 :single]
        [7 9 :single]
        [9 10 :double]
        [10 14 :single]
        [10 11 :single]
        [11 12 :double]
        [12 13 :single]
        [13 14 :double]
        [13 15 :single]
        [15 16 :double]
        [16 20 :single]
        [16 17 :single]
        [17 18 :double]
        [18 19 :single]
        [19 20 :double]
        [19 21 :single]
        [21 22 :double]
        [22 23 :single]
        [8 24 :single]
        [14 24 :single]
        [20 24 :single]
        [23 24 :single]]}
    :success true
    :tie-breaks []}}
