umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@transition_metals_hexafluoridoferrate.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms ["Fe#c-3#u5" "F#n3" "F#n3" "F#n3" "F#n3" "F#n3" "F#n3"]
      :bonds [
        [0 1 :single]
        [0 2 :single]
        [0 3 :single]
        [0 4 :single]
        [0 5 :single]
        [0 6 :single]]}
    :success true
    :tie-breaks []}
  :atom-typing-strict {
    :output {
      :atoms ["Fe#c-3#u5" "F#n3" "F#n3" "F#n3" "F#n3" "F#n3" "F#n3"]
      :bonds [
        [0 1 :single]
        [0 2 :single]
        [0 3 :single]
        [0 4 :single]
        [0 5 :single]
        [0 6 :single]]}
    :success true
    :tie-breaks []}
  :counts-most-saturated {
    :output {
      :atoms ["Fe#c-3#n2#u" "F#n3" "F#n3" "F#n3" "F#n3" "F#n3" "F#n3"]
      :bonds [
        [0 1 :single]
        [0 2 :single]
        [0 3 :single]
        [0 4 :single]
        [0 5 :single]
        [0 6 :single]]}
    :success true
    :tie-breaks []}
  :counts-strict {
    :output {
      :atoms ["Fe#c-3#n2#u" "F#n3" "F#n3" "F#n3" "F#n3" "F#n3" "F#n3"]
      :bonds [
        [0 1 :single]
        [0 2 :single]
        [0 3 :single]
        [0 4 :single]
        [0 5 :single]
        [0 6 :single]]}
    :success true
    :tie-breaks []}}
