umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@transition_metals_pentacyanocobaltate.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms ["Co#c-3#n3#u" "C" "N#n" "C" "N#n" "C" "N#n" "C" "N#n" "C" "N#n"]
      :bonds [
        [0 1 :single]
        [1 2 :triple]
        [0 3 :single]
        [3 4 :triple]
        [0 5 :single]
        [5 6 :triple]
        [0 7 :single]
        [7 8 :triple]
        [0 9 :single]
        [9 10 :triple]]}
    :success true
    :tie-breaks []}
  :atom-typing-strict {
    :output {
      :atoms ["Co#c-3#n3#u" "C" "N#n" "C" "N#n" "C" "N#n" "C" "N#n" "C" "N#n"]
      :bonds [
        [0 1 :single]
        [1 2 :triple]
        [0 3 :single]
        [3 4 :triple]
        [0 5 :single]
        [5 6 :triple]
        [0 7 :single]
        [7 8 :triple]
        [0 9 :single]
        [9 10 :triple]]}
    :success true
    :tie-breaks []}
  :counts-most-saturated {
    :output {
      :atoms ["Co#c-3#n3#u" "C" "N#n" "C" "N#n" "C" "N#n" "C" "N#n" "C" "N#n"]
      :bonds [
        [0 1 :single]
        [1 2 :triple]
        [0 3 :single]
        [3 4 :triple]
        [0 5 :single]
        [5 6 :triple]
        [0 7 :single]
        [7 8 :triple]
        [0 9 :single]
        [9 10 :triple]]}
    :success true
    :tie-breaks []}
  :counts-strict {
    :output {
      :atoms ["Co#c-3#n3#u" "C" "N#n" "C" "N#n" "C" "N#n" "C" "N#n" "C" "N#n"]
      :bonds [
        [0 1 :single]
        [1 2 :triple]
        [0 3 :single]
        [3 4 :triple]
        [0 5 :single]
        [5 6 :triple]
        [0 7 :single]
        [7 8 :triple]
        [0 9 :single]
        [9 10 :triple]]}
    :success true
    :tie-breaks []}}
