umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@v_group_vanadyl.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {:atoms ["V#c+2#u" "O#n2"] :bonds [[0 1 :double]]}
    :success true
    :tie-breaks []}
  :atom-typing-strict {
    :output {:atoms ["V#c+2#u" "O#n2"] :bonds [[0 1 :double]]}
    :success true
    :tie-breaks []}
  :counts-most-saturated {
    :output {:atoms ["V#c+2#u" "O#n2"] :bonds [[0 1 :double]]}
    :success true
    :tie-breaks []}
  :counts-strict {
    :output {:atoms ["V#c+2#u" "O#n2"] :bonds [[0 1 :double]]}
    :success true
    :tie-breaks []}}
